🚀Fixing spacing type stuff.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,89 +25,184 @@
     font-display: swap;
 }
 */
+* {
+    Box-sizing: border-box;
+} 
+    
+.container{
+    position:relative;
+    min-height: 100vh;
+    padding-bottom: 2.5rem;
+}
 
 body {
-    background-color:rgb(251, 225, 238);
+    background-color:rgb(245, 230, 238);
     font-family: 'manrope', Verdana, Tahoma, sans-serif;
     font-weight: 400;
-
+    color:rgb(43, 40, 42)
 }
 
-
-/*.container {
+.heading{
+    margin-left: 1rem;
 }
-*/
-/*.page-description {
-   
-    
 
-}*/
+h1{
+    font-size: 1rem;
+    text-align: left;
+    font-weight: 600;
+    margin-bottom: .25rem;
+}
+
+.heading h2{
+    font-size: .75rem;
+    margin: .25;
+    color: rgb(68, 63, 66);
+}
+
+.gradient{
+    background: rgba(157, 220, 221, 1.0);
+    background: -webkit-radial-gradient(top left, rgba(157, 220, 221, 1.0), rgba(246, 195, 222, 1.0));
+    background: -moz-radial-gradient(top left, rgba(157, 220, 221, 1.0), rgba(246, 195, 222, 1.0));
+    background: radial-gradient(to bottom right, rgba(157, 220, 221, 1.0), rgba(246, 195, 222, 1.0));
+}
+
+.page-description{
+    line-height: 1.3rem;
+   margin: 1.5rem 0 0 ;
+   text-align: center;
+   padding: 1rem 1rem .5rem;
+}
+
+.page-description span{
+    font-weight: 650;
+}
+
 /*buttons for state/ cities */
 .state_dropdown{
     margin: 1rem auto;
+    padding: 1rem 1rem;
+}
+
+.state_dropdown h3{
+    color: rgb(68, 63, 66);
+    margin:0;
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.state_dropdown p{
+    font-weight: 600;
+    margin:0 1rem;
+    padding-bottom: .5rem;
+    text-align: center;
+}
+
+.dropdown_container{
+    background: rgba(236, 231, 234, 0.75);
+    border-radius: .5rem;
+    box-shadow: .3125rem .3125rem .625rem .3125rem rgba(62, 32, 46, 0.5);
+    margin: 1rem auto;
+    padding: 1rem;
 }
 
 .dropdown_div {    
     position: relative;    
     display: block;
-    margin: 1rem auto;
+    margin: 1rem;
+    
 }
 
 .dropdown_button {    
-    background-color: #494549; /* button background colour */        
-    border-radius: 7px;
-    cursor: pointer;
-    color: #ffffff;    
+    background-color: hsl(188, 65%, 54% ); /* button background colour */        
+    border-radius: .3rem;
+    box-shadow: .2rem .2rem hsl(188, 65%, 54%, .25 );/*box's shadow*/
+   /*cursor: pointer; doesn't seem to work. */
+    color: #f7f5f7;    
     font-size: 1rem;    
     font-weight: 700;
-    padding: 1rem;    
-    width: 12rem;
+    margin: 0 auto;
+    text-shadow: .04rem .03rem rgb(136, 133, 135);
+    padding: .75rem;    
+    width: 14rem;
     text-align: center;
 }
 /* Button function */
 
     .dropdown_content {    
-        display: none; /* remove this to show all links before hovering */    
-        position: absolute;    
-        background-color: #f9f9f9; /* dropdown items - background colour */    
-        width: 100%; /* can remove this if you want to make the menu wider/narrower  */    
-        /* min-width: 180px; can add this if you need to change the minimu width of menu */    
-        box-shadow: 0px 6px 14px 0px rgba(0,0,0,0.3);
+        display: none; 
+        position: relative;    
+        background-color: rgb(240, 248, 248); /* dropdown items - background colour */    
+        width: 100%; /* can remove this if you want to make the menu wider/narrower  */        
+        box-shadow: 0 .375rem .875rem 0 hsl(0, 0, 0, 0.25); /*shadow on the drop down options*/
         z-index: 1;
     }
 
         .dropdown_content a {    
-            font-family: 'manrope';    
-            color: #000000;    
+            color:rgb(68, 63, 66); /*the links and their box styling*/
+            font-family: 'manrope';        
             display: block;
             padding: 1rem;
             text-align: center;    
-            
+            margin: 0 auto;
             text-decoration: none;    
             
         }
 
             .dropdown_content a:hover {    
-                background-color: #a194a0; /* dropdown items hover - change background colour */
+                background-color: hsl(188, 65%, 54%); /* dropdown items hover - change background colour */
             }
 
-                .dropdown_div:hover .dropdown_content {    
+                .dropdown_div:hover .dropdown_content {   
                     display: block;
+                    margin: 0 auto;
                     width: 13rem;
+                    box-shadow: .1rem .1rem .1rem rgb(133, 140, 141, .25);
                 }
 
                 .dropdown_div:hover .dropdown_button {    
-                    background-color: #302e30; /* button hover - change background colour */
+                    background-color: rgb(133, 140, 141);
+                    text-shadow: .04rem .02rem rgb(43, 40, 42);
+                    box-shadow: .2rem .2rem rgb(133, 140, 141, .25); /* button hover - change background colour and shadow color*/
                 }
 
-                    p{    
-                        
-                    }
-
-                    h2{    
-                        
-                    }
-
                     /* Button function */
+footer{
+    bottom:0;    
+    font-size: .75rem;
+    height: 2rem;
+    width: 100%;
+}
 
+
+
+/*salon list divs*/
+
+.profile-container{
+    margin: 1rem;
+}
+
+.ul-availability{
+    padding: 0;
+}
                     
+.photos-grid{
+    display:flex;
+    flex-wrap: wrap;
+    margin: 1rem 3.6rem;
+    
+}
+
+div.client-img{
+    /*flex: 50%;*/
+    padding: .125rem .25rem;
+    max-width: fit-content;
+}
+
+figure{
+    margin:0;
+    
+    
+
+}
+
